修改用户手册

--- a/quickstart/api/5.api_auth.md
+++ b/quickstart/api/5.api_auth.md
@@ -33,7 +33,7 @@
 
 ### 1. 设置jwt的值
 
-如用户登录页面，可使用`response.SetJWTBody(loginStateInfo)`设置`jwt`保存的信息
+如用户登录页面，用户登录成功后可使用`response.SetJWTBody(loginStateInfo)`保存用户的基础信息如：userId等到jwt中
 
 ```go
 type LoginHandler struct {
@@ -49,7 +49,7 @@ func (u *LoginHandler) Handle(name string, engine string, service string, ctx *c
     //检查用户名密码是否正确
     
 	response.SetJWTBody(map[string]interface{}{
-		"id": 11000,
+		"uid": 11000,
 	}) //将用户登录信息保存到jwt
     
     response.SetContent(200, "success")
@@ -63,14 +63,14 @@ func (u *LoginHandler) Handle(name string, engine string, service string, ctx *c
 
 
 
-### 2. 获取jwt的值
+### 2. 获取`jwt`中存储的数据
 
 ```go
 
 func (u *QueryHandler) Handle(name string, engine string, service string, ctx *context.Context) (r context.Response, err error) {
 	response := context.GetStandardResponse()
 
-	jwt := ctx.Request.Ext.GetJWTBody() //获取jwt对象,值为:map[string]interface{}{"id": 11000}
+	jwt := ctx.Request.Ext.GetJWTBody() //获取jwt对象,值为:map[string]interface{}{"uid": 11000}
 
 	response.SetContent(200, jwt)
 	return response, nil
