修改用户手册

--- a/quickstart/api/5.api_auth.md
+++ b/quickstart/api/5.api_auth.md
@@ -31,7 +31,7 @@
 |enable|可选|是否启用当前配置，未指定是为true|
 
 
-### 1. 设置jwt的值
+### 1. 设置`jwt`的原始数据
 
 如用户登录页面，用户登录成功后可使用`response.SetJWTBody(loginStateInfo)`保存用户的基础信息如：userId等到jwt中
 
