修改用户手册

--- a/quickstart/api/7.api_circuit.md
+++ b/quickstart/api/7.api_circuit.md
@@ -1,3 +1,3 @@
 ## 熔断降级
 
-服务可能因为网络原因或是依赖服务自身问题出现调用故障或延迟，而这些问题会直接导致调用方的对外服务也出现延迟，若此时调用方的请求不断增加，最后就会出现因等待出现故障的依赖方响应而形成任务积压，线程资源无法释放，最终导致自身服务的瘫痪，进一步甚至出现故障的蔓延最终导致整个系统的瘫痪。如果这样的架构存在如此严重的隐患，那么相较传统架构就更加的不稳定。为了解决这样的问题，因此产生了类似断路器等一系列的服务保护熔断，降级机制/
+服务可能因为网络原因，或依赖的服务出现故障或延迟，而这些问题会直接导致调用方的对外服务也出现延迟，若此时调用方的请求不断增加，最后就会出现因等待出现故障的依赖方响应而形成任务积压，线程资源无法释放，最终导致自身服务的瘫痪，进一步甚至出现故障的蔓延最终导致整个系统的瘫痪。为了解决这样的问题，产生了类似断路器的一系列的服务如：服务熔断，服务降级。
