修改用户手册

--- a/quickstart/api/7.api_circuit.md
+++ b/quickstart/api/7.api_circuit.md
@@ -34,4 +34,4 @@ hydra支持的熔断模式有：
 |circuit-breakers.url|必须|熔断URL，为`*`时表示任意URL|
 |circuit-breakers.request-per-second|可选|每秒请求数,为零时表示不限制|
 |circuit-breakers.failed-percent|可选|失败率，为零时表示不限制|
-|circuit-breakers.reject-per-sencond|请求拒绝数,为零时表示不限制|
+|circuit-breakers.reject-per-sencond|可选|请求拒绝数,为零时表示不限制|
