修改用户手册

--- a/quickstart/api/3.api_static.md
+++ b/quickstart/api/3.api_static.md
@@ -8,8 +8,9 @@
 {
     "prefix":"/static",
     "dir":"../images",
-    "exts":".jpg;.gif;.png",
-    "enbale":true
+    "exts":[".jpg",".png"],
+    "first-page":"index.htm",
+    "disable":true
 }
 ```
 
@@ -19,7 +20,8 @@
 |prefix|必须|请求路径的前缀名|
 |dir|必须|静态文件存放路径|
 |exts|必须|静态文件的扩展名,为`*`则不限制扩展名|
-|enable|可空|true:启用静态文件配置, false:禁用静态文件配置|
+|first-page|可空|默认为`index.html`
+|disable|可空| true:禁用静态文件配置|
 
 ####  配置示例
 
@@ -28,8 +30,8 @@
 {
     "prefix":"/",
     "dir":"../static",
-    "exts":".jpg;.html",
-    "enbale":true
+    "exts":[".jpg",".html"],
+    "first-page":"index.html",
 }
 ```
 
@@ -47,8 +49,7 @@
 {
     "prefix":"/",
     "dir":"../static",
-    "exts":"*",
-    "enbale":true
+    "exts":["*"]
 }
 ```
 
@@ -70,8 +71,7 @@
 {
     "prefix":"/content",
     "dir":"../static",
-    "exts":"*",
-    "enbale":true
+    "exts":["*"]
 }
 ```
 
