--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -71,8 +71,7 @@
 ```json
 {
     "address":":8080",
-    "status":"start",
-    "engines":"monitor",
+    "status":"start",  
     "tls":{
         "cert":"../www.baidu.com.crt",
         "key":"../baidu2017098773.key"
@@ -83,8 +82,7 @@
 
 |参数名|必须|说明| 
 |:------|-------|:------|
-|address|必须|服务器启动地址,有效的格式为`[ip]:<port>`,ip地址为空时为本机所有ip|
-|status|必须|服务器状态,默认为start，可选值为: start(启动)，stop(停止)|
-|engines|可空|引擎配置参数，使用了内置引擎时必须填写，多个擎使用逗号分隔。内置的引擎有:`alarm`,`monitor`,`file`等,未配置则不能使用内置引擎|
-|tls|可空|tls证书配置，未配置则不启动tls|
+|address|可选|服务器启动地址,有效的格式为`<ip>:<port>`,未指定时默认端口为`8080`|
+|status|可选|服务器状态,默认为start，可选值为: start(启动)，stop(停止)|
+|tls|可选|tls证书配置，未配置则不启动tls|
 |host|可空|主机头配置，配置后只能通过主机头请求|
