--- a/quickstart/api/2.api_router.md
+++ b/quickstart/api/2.api_router.md
@@ -4,14 +4,12 @@
 {
     "routers":[
         {
-            "name":"/order/:query",
-            "engine":"*",
+            "name":"/order/:query",            
             "action":"get;post",
             "service":"/order/@query",
-            "args":"mq=redis"
+            "args":{"db":"czth","mq":"redis"}
         }
-    ],
-    "args":"db=oracle"
+    ],    
 }
 ```
 
@@ -19,12 +17,10 @@
 |参数名|必须|说明|
 |:------|:-------:|:------|
 |.routers|必须|路由列表|
-|.args|可选|所有服务共用的全局配置参数，执行服务时传入该配置参数|
 |.routers.name|必须|外部服务请求规则，支持以冒号开头的通用配符，也支持正则表达式。如`/order/request`全字匹配路径为/order/request的请求地址，`/order/:a`,匹配以`/order/`开头的任何路径，并将`:a`的实际值作为变量`@a`保存，当前配置节点的其它参数可用使用`@a`使用该值|
 |.routers.service|必须|服务名称，支持变量翻译|
-|.routers.engine|可选|未指定时为`*`,支持所有引擎|
 |.routers.action|可选| 未指定时只支持`GET`，`POST`,`PUT`,`DELETE`。可选的值有:`GET`,`POST`,`HEAD`,`DELETE`,`PUT`,`OPTIONS`,`TRACE`,`PATCH`等。多种请求方式用分号分隔|
-|.routers.args|可选|服务执行所需的配置参数，系统会自动与`.args`合并，以当前的配置覆盖`.args`配置|
+|.routers.args|可选|服务执行所需的配置参数|
 
 ####  1). 路由示例
 
@@ -42,19 +38,6 @@
 ```
 支持`GET`，`POST`,`PUT`,`DELETE`请求, 从已加载的所有引擎`engines`(`../conf`中配置的`engines`)中查找`/order/query`服务，未找到则返回`404`错误
 
-等价于:
-```json
-{
-    "routers":[
-        {
-            "name":"/order/query",
-            "action":"GET;POST;PUT;DELETE",
-            "engine":"*",
-            "service":"/order/query",
-        }
-    ]
-}
-```
 
 + 命名路由
 
