fix:修改用户手册

--- a/quickstart/api/5.api_auth.md
+++ b/quickstart/api/5.api_auth.md
@@ -11,8 +11,8 @@
         "mode":"HS512",
         "secret":"12345678",
         "expireAt":300,
-        "excludes":"/login;/index",
-        "enable":true
+        "excludes":["/login;/index"],
+        "disable":true
     }
 }
 ```
@@ -28,7 +28,7 @@
 |jwt.mode|必须|加密模式,如：`HS256,HS384,HS512,RS256,ES256,ES384,ES512,RS384,RS512,PS256,PS384,PS512`|
 |jwt.expireAt|必须|过期时长,单位秒|
 |jwt.excludes|可选|排除的页面，不参与jwt密码串验证的页面地址，一般用于设置无需授权的页面,多个以分号分隔|
-|enable|可选|是否启用当前配置，未指定是为true|
+|disable|可选|是否启用当前配置，未指定是为false|
 
 
 ### 1. 设置`jwt`的原始数据
