修改用户手册

--- a/quickstart/6.first_project.md
+++ b/quickstart/6.first_project.md
@@ -6,11 +6,12 @@ hydra的项目可以通过gaea创建，在创建前请确保安装了gaea,如果
 
 ```sh
 ~/work/bin$ gaea new quickstart --service
-[2018/03/06 09:19:00.956377][i][3f97ca0bf]启动 gaea ...
-[2018/03/06 09:19:00.956497][i][3f97ca0bf]创建文件: /home/work/src/hydraDemo/main.go 140
-[2018/03/06 09:19:00.956531][i][3f97ca0bf]创建文件: /home/work/src/hydraDemo/loader.go 338
-[2018/03/06 09:19:00.956594][i][3f97ca0bf]创建文件: /home/work/src/hydraDemo/services/order/order.query.go 518
-[2018/03/06 09:19:00.956598][i][3f97ca0bf]项目生成成功: /home/work/src/hydraDemo
+[2018/03/28 19:10:37.677660][gaea][i][6caa4d5a8]启动 gaea ...
+[2018/03/28 19:10:37.677794][gaea][i][6caa4d5a8]创建文件: /home/work/src/quickstart/main.go 335
+[2018/03/28 19:10:37.677832][gaea][i][6caa4d5a8]创建文件: /home/work/src/quickstart/loader.go 343
+[2018/03/28 19:10:37.677895][gaea][i][6caa4d5a8]创建文件: /home/work/src/quickstart/services/order/order.query.go 413
+[2018/03/28 19:10:37.677902][gaea][i][6caa4d5a8]项目生成成功: /home/work/src/quickstart
+
 ```
 
 通过以上命令我们就创建了一个service项目，通过这个项目编写的代码可运行于http api，web，rpc，mqc,cron等服务器，项目的目录结构如下:
@@ -32,6 +33,7 @@ hydra的项目可以通过gaea创建，在创建前请确保安装了gaea,如果
 
 `services/order.query.go`实现component.Handler接口，用于提供服务逻辑实现，代码如下:
 ```go
+
 package order
 
 import (
@@ -40,114 +42,97 @@ import (
 )
 
 type QueryHandler struct {
+	container component.IContainer
 }
 
 func NewQueryHandler(container component.IContainer) (u *QueryHandler) {
-	return &QueryHandler{}
+	return &QueryHandler{container: container}
 }
-func (u *QueryHandler) Handle(name string, engine string, service string, ctx *context.Context) (r context.Response, err error) {
-	response := context.GetStandardResponse()
-	response.SetContent(200, "hello world")
-	return response, nil
+func (u *QueryHandler) Handle(name string, engine string, service string, ctx *context.Context) (r interface{}) {
+	return "success"
 }
 
-func (u *QueryHandler) Close() error {
-	return nil
-}
+
 
 ```
 
 `loader.go`将服务注册到hydra组件，代码如下:
 ```go
+
 package main
 
 import (
-	"github.com/qxnw/quickstart/services/order"
 	"github.com/qxnw/hydra/component"
 	"github.com/qxnw/hydra/engines"
+	"quickstart/services/order"
 )
 
 func loader() engines.ServiceLoader {
-	return func(component *component.StandardComponent, container component.IContainer) {
+	return func(component *component.StandardComponent, container component.IContainer) error {	
 		component.AddMicroService("/order/query", order.NewQueryHandler)
+		return nil
 	}
 }
+
+
 
 ```
 
 
 `main.go`根据服务注册的loader初始化hydra,并启服务器，代码如下
 ```go
+
 package main
 
 import (
+	"github.com/qxnw/hydra/engines"
 	"github.com/qxnw/hydra/hydra"
 )
 
 func main() {
-	hydra := hydra.New(loader())
-	defer hydra.Close()
-	hydra.Start()
+	engines.AddServiceLoader(loader())
+	app := hydra.NewApp(
+		hydra.WithPlatName("quickstart"), //平台名称
+		hydra.WithSystemName("test"), //系统名称
+		hydra.WithServerTypes("api"), //服务器类型
+		hydra.WithAutoCreateConf(true), //自动创建配置
+		hydra.WithDebug()) //启动debug模式
+	app.Start()
 }
 
+
+
 ```
 
-### 2. 配置服务器运行参数
-服务器运行参数是通过注册中心管理的，注册中心目前支持zookeeper([安装zookeeper](https://github.com/qxnw/hydra/blob/master/quickstart/4.install_zk.md))，
-配置服务器运行参数(端口，路由规则，安全认证等)可以使用hydrd cloud([安装hydrd cloud](https://github.com/qxnw/hydra/blob/master/quickstart/5.install_themis.md))图形界面进行操作，也可以使用zooInspector([安装zooInspector](https://issues.apache.org/jira/secure/attachment/12436620/ZooInspector.zip))手动编写json
-
-####  使用zooInspector配置服务器参数
-1. 启动`zooInspector`输入zookeeper服务器地址
-2. 创建服务器配置目录,格式： /<平台名称>/<系统名称>/<服务器类型>/<集群标识>/conf
-
-|名称|说明|
-|:------:|:------|
-|平台名称|项目或平台名称|
-|系统名称|子系统名称，如后台管理系统，前端用户系统等|
-|服务器类型|可选的服务器类型有:api,rpc,web,mqc,cron|
-|集群标识|子系统内的一组服务的集群|
-
-我们按如下结构创建一个`api`服务器配置：
-   
-	|-- myplat
-	|     -- quickstart
-	|        -- api
-	|           -- order
-	|              -- conf
-	|                 --router
-
-`conf`,`router`为必须设置节点，/myplat/quickstart/api/order/conf节点和/myplat/quickstart/api/order/conf/router节点的值，我们按以下内容设置:
-
-|节点名称|类型|json配置|说明|
-|------|:------:|:------|:-------|
-|.../api/order/conf|主配置|{"address":":8081","status":"start"}|服务器状态为启动|
-|.../api/order/conf/router|路由配置|{"routers":[{"name":"/order/query","service":"/order/query"}]}|`name`为外部请求地址，`service`为注册的服务名称|
 
 
-### 3. 启动服务器
+### 1. 启动服务器
 #### a. 直接启动
-在$GOPATH/bin目录下使用命令`go install quickstart`进行编译，然后执行命令:`./quickstart <平台名称> -r <注册中心地址> -t <集群标识>`
+在$GOPATH/bin目录下使用命令`go install quickstart`进行编译，然后执行命令:`./quickstart start --registry <注册中心地址> -cluster <集群标识>`
 
 ```sh
-H97-HD3:~/work/bin$ ./quickstart quickstart -r "zk://192.168.106.18" -t "t"
-[2018/03/06 09:53:39.170744][hydra][i][20d36a9e4]Connected to 192.168.106.18:2181
-[2018/03/06 09:53:39.174933][hydra][i][20d36a9e4]Re-submitting `0` credentials after reconnect
-[2018/03/06 09:53:39.174916][hydra][i][20d36a9e4]Authenticated: id=99447815291405140, timeout=4000
-[2018/03/06 09:53:40.170467][hydra][i][20d36a9e4]启动 hydra server(t,zk,v:)...
-[2018/03/06 09:53:40.174895][order-api][i][f88267338]开始启动:order.api(t)
-[2018/03/06 09:53:40.671032][hydra][i][20d36a9e4]启动成功:health-checker.api(addr:http://192.168.5.71:10160)
-[2018/03/06 09:53:40.687893][order-api][i][f88267338]启动成功:order.api(t)(addr:http://192.168.5.71:8081,srvs:1)
+H97-HD3:~/work/bin$ sudo quickstart start --registry local://../ --cluster t
+[2018/03/28 19:13:05.116500][hydra][i][8edf9667c]初始化 /quickstart/test/api/t
+[2018/03/28 19:13:05.117642][test-t(api)][i][10df900a0]开始启动...
+[2018/03/28 19:13:05.118068][test-t(api)][w][10df900a0][未启用 熔断设置]
+[2018/03/28 19:13:05.118054][test-t(api)][w][10df900a0][未启用 静态文件]
+[2018/03/28 19:13:05.118063][test-t(api)][w][10df900a0][未启用 header设置]
+[2018/03/28 19:13:05.118092][test-t(api)][w][10df900a0][未启用 ajax请求限制设置]
+[2018/03/28 19:13:05.118095][test-t(api)][w][10df900a0][未启用 metric设置]
+[2018/03/28 19:13:05.118099][test-t(api)][w][10df900a0][未启用 host设置]
+[2018/03/28 19:13:05.118073][test-t(api)][w][10df900a0][未启用 jwt设置]
+[2018/03/28 19:13:05.618454][test-t(api)][i][10df900a0]启动成功(http://192.168.5.71:8090,2)
 
 ```
 
-我们看到服务器quickstart-order-api已启动成功，外部访问地址是http://192.168.5.71:8081,提供的服务数是1个
+我们看到服务器quickstart-order-api已启动成功，外部访问地址是http://192.168.5.71:8081,提供的服务数是2个
 
 
 ### 4. 访问服务
   在终端输入命令访问服务: `curl http://http://192.168.5.71:8081/order/query`
 ```sh
 ~/work/bin$ curl http://http://192.168.5.71:8081/order/query
-hello world
+success
 
 ```
 返回内容为我们在$GOPATH/src/quickstart/service/myservice.go定义的内容
