--- a/quickstart/api/1.api_intro.md
+++ b/quickstart/api/1.api_intro.md
@@ -83,6 +83,6 @@
 |参数名|必须|说明| 
 |:------|-------|:------|
 |address|可选|服务器启动地址,有效的格式为`<ip>:<port>`,未指定时默认端口为`8080`|
-|status|可选|服务器状态,默认为start，可选值为: start(启动)，stop(停止)|
+|status|可选|服务器状态,默认为start，可选值为: start(启动)，stop(停止),restart(每次保存conf配置后系统都重启服务器)|
 |tls|可选|tls证书配置，未配置则不启动tls|
 |host|可空|主机头配置，配置后只能通过主机头请求|
