--- a/quickstart/api/2.api_router.md
+++ b/quickstart/api/2.api_router.md
@@ -19,7 +19,7 @@
 |.routers|必须|路由列表|
 |.routers.name|必须|外部服务请求规则，支持以冒号开头的通用配符，也支持正则表达式。如`/order/request`全字匹配路径为/order/request的请求地址，`/order/:a`,匹配以`/order/`开头的任何路径，并将`:a`的实际值作为变量`@a`保存，当前配置节点的其它参数可用使用`@a`使用该值|
 |.routers.service|必须|服务名称，支持变量翻译|
-|.routers.action|可选| 未指定时只支持`GET`，`POST`,`PUT`,`DELETE`。可选的值有:`GET`,`POST`,`HEAD`,`DELETE`,`PUT`,`OPTIONS`,`TRACE`,`PATCH`等。多种请求方式用分号分隔|
+|.routers.action|可选| 未指定时只允许`GET`，`POST`,`PUT`,`DELETE`，`HEAD`。可选的值有:`GET`,`POST`,`HEAD`,`DELETE`,`PUT`,`OPTIONS`,`TRACE`,`PATCH`等。多种请求方式用分号分隔|
 |.routers.args|可选|服务执行所需的配置参数|
 
 ####  1). 路由示例
@@ -31,12 +31,12 @@
     "routers":[
         {
             "name":"/order/query",
-            "service":"/order/query",
+            "service":"/order/query"
         }
     ]
 }
 ```
-支持`GET`，`POST`,`PUT`,`DELETE`请求, 从已加载的所有引擎`engines`(`../conf`中配置的`engines`)中查找`/order/query`服务，未找到则返回`404`错误
+支持`GET`，`POST`,`PUT`,`DELETE`，`HEAD`请求
 
 
 + 命名路由
@@ -46,7 +46,7 @@
     "routers":[
         {
             "name":"/:a/:b",
-            "service":"/@b/@a",
+            "service":"/@b/@a"
         }
     ]
 }
@@ -72,7 +72,7 @@
     "routers":[
         {
             "name":"/*name",
-            "service":"/@name",
+            "service":"/@name"
         }
     ]
 }
@@ -88,11 +88,11 @@
     "routers":[
          {
             "name":"/order/request",
-            "service":"/order/request",
+            "service":"/order/request"
         },
         {
             "name":"/:a/:b",
-            "service":"/@b/@a",
+            "service":"/@b/@a"
         }
     ]
 }
