修改用户手册

--- a/quickstart/6.first_project.md
+++ b/quickstart/6.first_project.md
@@ -125,13 +125,13 @@ H97-HD3:~/work/bin$ sudo quickstart start --registry local://../ --cluster t
 
 ```
 
-我们看到服务器quickstart-order-api已启动成功，外部访问地址是http://192.168.5.71:8081,提供的服务数是1个
+我们看到服务器已启动成功，外部访问地址是http://192.168.5.71:8090,提供的服务数是1个
 
 
 ### 4. 访问服务
-  在终端输入命令访问服务: `curl http://http://192.168.5.71:8081/order/query`
+  在终端输入命令访问服务: `curl http://http://192.168.5.71:8090/order/query`
 ```sh
-~/work/bin$ curl http://http://192.168.5.71:8081/order/query
+~/work/bin$ curl http://http://192.168.5.71:8090/order/query
 success
 
 ```
