优化服务注册

--- a/quickstart/6.first_project.md
+++ b/quickstart/6.first_project.md
@@ -2,7 +2,7 @@
 hydra的项目可以通过gaea创建，在创建前请确保安装了gaea,如果还没安装请查阅[gaea工具安装](https://github.com/qxnw/hydra/blob/master/quickstart/3.install_gaea.md)
 
 ### 1. 创建项目
-现在一切就绪我们就可以创建项目了，打开终端输入命令:`gaea new hydraDemo --service`
+现在一切就绪我们就可以创建项目了，打开终端输入命令:`gaea new quickstart --service`
 
 ```sh
 ~/work/bin$ gaea new quickstart --service
@@ -94,7 +94,7 @@ func main() {
 	app := hydra.NewApp(
 		hydra.WithPlatName("quickstart"), //平台名称
 		hydra.WithSystemName("test"), //系统名称
-		hydra.WithServerTypes("api"), //服务器类型
+		hydra.WithServerTypes("api"), //服务器类型,只作为api服务器运行
 		hydra.WithAutoCreateConf(true), //自动创建配置
 		hydra.WithDebug()) //启动debug模式
 	app.Start()
